opam-version: "1.2"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors: ["Thomas Gazagnaire" "Romain Calascibetta"]
homepage: "https://github.com/samoht/mirage-lambda"
license: "ISC"
dev-repo: "https://github.com/samoht/mirage-lambda.git"
bug-reports: "https://github.com/samoht/mirage-lambda/issues"

build: [ "jbuilder" "build" "-p" name "-j" jobs ]
depends: [
  "jbuilder" {build}
  "ocaml-protoc"
]
